--- a/package.json
+++ b/package.json
@@ -1,49 +1,24 @@
 {
-  "name": "react-init",
+  "name": "166-kargo",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
-    "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.1.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.13.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "next": "10.0.6",
+    "next-redux-wrapper": "^6.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
-    "react-i18next": "^9.0.10",
-    "react-redux": "7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "redux": "4.0.5",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
