--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "i18next-browser-languagedetector": "^4.1.1",
     "moment": "^2.29.1",
     "next": "10.0.6",
+    "next-auth": "^3.4.2",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
+    "react-intl": "^5.12.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   }
 }
