--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.6",
     "next-auth": "^3.4.2",
     "next-redux-wrapper": "^6.0.2",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
