--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "next": "10.0.6",
     "next-auth": "^3.4.2",
+    "next-images": "^1.7.0",
     "next-redux-wrapper": "^6.0.2",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
