--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
-  },
+    "start": "next start -p $PORT",
+    "heroku-postbuild":"npm run build"
+  }, 
   "dependencies": {
     "axios": "^0.21.1",
     "i18next-browser-languagedetector": "^4.1.1",
