--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines":{
-    "node":"14.x"
+    "node":"15.x",
+    "npm":"7.x"
   },
 
   "scripts": {
