--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines":{
-    "node":"15.x",
-    "npm":"7.x"
+    "node":"15.9.0",
+    "npm":"7.5.3"
   },
 
   "scripts": {
