some api is integrated

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL = 'https://next-auth.js.org/configuration/providers'
+NEXT_PUBLIC_API_URL = https://166api.titr.az/api/
+#NEXT_PUBLIC_API_URL = https://private-909211-166kargo.apiary-mock.com/api/auth/
