--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "166-kargo",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "node":"15.9.0",
-    "npm":"7.5.3"
+  "engines": {
+    "node": "15.9.0",
+    "npm": "7.5.3"
   },
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,6 +24,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
+    "react-html-parser": "^2.0.2",
     "react-intl": "^5.12.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
