--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL = https://166api.titr.az/api/
+NEXT_PUBLIC_IMAGE_URL = https://166.titr.az/storage/news/
 #NEXT_PUBLIC_API_URL = https://private-909211-166kargo.apiary-mock.com/api/auth/
