--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-redux-wrapper": "^6.0.2",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
+    "react-day-picker": "^7.4.10",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
     "react-html-parser": "^2.0.2",
@@ -29,8 +30,9 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "5.10.0",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0"
   }
 }
