--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-redux-wrapper": "^6.0.2",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
+    "react-datepicker": "^3.6.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
