--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
+    "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0"
   }
 }
