--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL = https://166api.titr.az/api/
+NEXT_PUBLIC_API_URL = https://166cargoapi.166cargo.az/api/
 NEXT_PUBLIC_IMAGE_URL = https://166.titr.az/storage/news/
 NEXT_PUBLIC_API_IMAGE_URL = https://166api.titr.az/storage/
 
